gt for TEAM-8-1

--- a/ReadData.ipynb
+++ b/ReadData.ipynb
@@ -284,19 +284,13 @@
     "for item in targets.find():\n",
     "    if item['document']['targets']:\n",
     "        target_count = len(item['document']['targets']['targets'])\n",
-    "        target_id = item['document']['targets']['targets'][0]['target_id']['id']\n",
-    "        target_state = item['document']['targets']['targets'][0]['target_state']\n",
-    "        head = item['document']['targets']['targets'][0]['head']\n",
-    "        print ('target_count',target_count,'target_id',target_id, 'target_state',target_state)\n",
+    "#         print (target_count)\n",
+    "#         target_id = item['document']['targets']['targets'][0]['target_id']['id']\n",
+    "#         target_state = item['document']['targets']['targets'][0]['target_state']\n",
+    "#         head = item['document']['targets']['targets'][0]['head']\n",
+    "#         print ('target_count',target_count,'target_id',target_id, 'target_state',target_state)\n",
     "#         print (head)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
