new weight trigger

--- a/EventTrigger.ipynb
+++ b/EventTrigger.ipynb
@@ -119,8 +119,8 @@
    "source": [
     "# take water\n",
     "plot_gondola_id = 1\n",
-    "plot_shelf_id = 5\n",
-    "plot_plate_ids = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+    "plot_shelf_id = 3\n",
+    "\n",
     "\n",
     "title = '[gondola %d shelf %d]' % (plot_gondola_id, plot_shelf_id)\n",
     "plot_data2(weight_shelf_mean[plot_gondola_id-1][plot_shelf_id-1],\n",
@@ -128,7 +128,7 @@
     "          timestamps[plot_gondola_id-1], \n",
     "          title)\n",
     "\n",
-    "\n",
+    "# plot_plate_ids = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
     "# for plot_plate_id in plot_plate_ids:\n",
     "#     title = '[gondola %d shelf %d plate %d]' % (plot_gondola_id, plot_shelf_id, plot_plate_id)\n",
     "#     plot_data2(weight_plate_mean[plot_gondola_id-1][plot_shelf_id-1][plot_plate_id-1],\n",
@@ -142,7 +142,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "events = weightTrigger.detect_weight_events(weight_shelf_mean, weight_shelf_std, weight_plate_mean, weight_plate_std, timestamps)\n",
+    "for event in events:\n",
+    "    print (event, '\\n')"
+   ]
   }
  ],
  "metadata": {
